fix spacing on summary page

--- a/src/client/src/components/LoginCard/styles.module.css
+++ b/src/client/src/components/LoginCard/styles.module.css
@@ -29,7 +29,7 @@
 
 .signInButton {
   font-size: 1em;
-  margin-left: 10px;
+  margin-left: 16px;
   border: none;
 }
 
