--- a/src/client/src/components/Title/styles.module.css
+++ b/src/client/src/components/Title/styles.module.css
@@ -3,5 +3,5 @@
   margin-top: 1.75em;
   margin-right: 1%;
   margin-bottom: 12px;
-  font-weight: bold;
+  font-weight: 500;
 }
